--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@ body {
 
 .board h1 {
   color: #eee;
+  text-shadow: 1px 1px 6px red;
   margin-bottom: 16px;
 }
 
@@ -45,7 +46,7 @@ body {
   background: transparent;
   border: 2px solid #eee;
   color: #eee;
-  width: 100px;
+  width: 125px;
   border-radius: 5px;
   transition: 0.2s;
   font-weight: bold;
@@ -55,6 +56,7 @@ body {
 .board button:hover {
   background: #eee;
   color: #222;
+  transform: scale(1.1);
 }
 
 .board button:focus {
@@ -78,14 +80,15 @@ body {
 
 .turn .square, .winner .square {
   width: 70px;
-  height: 70px;
+  height: 74px;
   pointer-events: none;
   border-color: transparent;
 }
 
 .square.is-selected {
   border-color: #fff;
-  background: #09f;
+  box-shadow: inset 0 0 0 2px brown;
+  margin: 2px 0;
 }
 
 .winner {
@@ -130,4 +133,12 @@ body {
   place-items: center;
   cursor: pointer;
   font-size: 48px;
+  transition: .3s;
+}
+
+.square:hover {
+  border: 2px solid #eee;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: gray;
 }
